Deliver flag evaluation endpoint (#73)
